@@ -2,7 +2,7 @@
      "NAME":"In-Flight Waypoints",
 	 "URL":"https://raw.githubusercontent.com/jrossignol/InFlightWaypoints/master/GameData/InFlightWaypoints/InFlightWaypoints.version",
 	 "DOWNLOAD":"https://github.com/jrossignol/InFlightWaypoints/releases",
-     "CHANGE_LOG_URL":"https://raw.githubusercontent.com/jrossignol/InFlightWaypoints/1.0.3/CHANGES.txt",
+     "CHANGE_LOG_URL":"https://raw.githubusercontent.com/jrossignol/InFlightWaypoints/1.1.0/CHANGES.txt",
      "GITHUB":{
          "USERNAME":"jrossignol",
          "REPOSITORY":"InFlightWaypoints",
@@ -10,8 +10,8 @@
      },
      "VERSION":{
          "MAJOR":1,
-         "MINOR":0,
-         "PATCH":3,
+         "MINOR":1,
+         "PATCH":0,
          "BUILD":0
      },
      "KSP_VERSION":{
